--- a/index/styles/gpd.html
+++ b/index/styles/gpd.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What is GPD?</title>
+    <title>What is GDP?</title>
     <link rel="stylesheet" href="../styles/gpd.css">
 
 </head>
@@ -25,8 +25,47 @@
 
     <main>
 
-        <p class="main">
+        <h1 class="main">What is GDP?</h1>
 
+        <p>
+
+            GDP is the sum of all products and services of the economy, and your size says how strong is this economy is.           
+
+        </p>
+
+        <p>
+
+            But the size of the economy doesn't say so much about a country, in other words, a big GDP only says how strong is this economy is, but this number doesn't say anything about the life quality of the society. 
+
+        </p>
+
+        <p>
+
+            We can look at Brazil, for example, more and less ten years ago, the South American country was the 6° most powerful economy of the world, but try to ask for any people that live here if he can feel this number in your real life? The majority of the answers will be no! 
+
+        </p>
+
+        <p>
+
+            But! How your country have a number like this and your people cannot access this wealth? Yes! Can you perceive how the GDP can be only a number? Here in Brazil, we have several structural problems to solve, before the people start to see any additional money in your accounts.
+
+        </p>
+
+        <p>
+
+            Here I can say two that problems, the first are the concentration of wealth, still based on the old empire oligarchy, Here I can say two problems, the first is the concentration of wealth, still based on the old empire oligarchy, the second of course is about education. 
+
+        </p>
+
+        <p>
+
+            The educational system is poor and extremely uneven when we have a big gap between the public systems and the private systems, we have, by the way, big differences within the public education system itself. It's easy to identify a big difference between a school-based in São Paulo, and another school-based on Roraima. So how you can distribute all this wealth with the people? Here I will spare you from talking about how corruption sucks our riches day after day, and how we would be better without this disease.
+
+        </p>
+
+        <p>
+
+            So now I only need to thank you, if you got here. This text was written with two proposals, the first is to put in practice my skills in HTML and CSS, the second is to put in practice to my poor English. In the future, I plan to write more about economics while I put my skills to prove. Thanks a lot! 
 
 
         </p>
