--- a/index/styles/index.html
+++ b/index/styles/index.html
@@ -180,6 +180,29 @@
                     </td>
 
                 </tr>
+
+                    <td>
+
+                        6°
+
+                    </td>
+                    <td>
+
+                        <img src="../flags/united_kingdom.png" alt="united Kingdom flag" id="flags">
+
+                    </td>
+                    <td>
+
+                        United Kingdom
+
+                    </td>
+                    <td>
+
+                        2.9 trillion
+
+                    </td>
+
+                </tr>
                 <tr>
 
                     <td>
