--- a/index/styles/article.html
+++ b/index/styles/article.html
@@ -25,7 +25,7 @@
 
             <li>
 
-                <a href="gpd.html" target="_blank" rel="next">What is GPD?</a>
+                <a href="gpd.html" target="_blank" rel="next">What is GDP?</a>
 
             </li>
 
